sms scraper using scival

--- a/scival_publications.ipynb
+++ b/scival_publications.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "71be538a-2b12-4e9e-a089-5f119656add7",
    "metadata": {},
    "outputs": [
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e29f00a9-95b1-4543-8306-0135969cd7f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_PATH_TO_CSV = \"authorlist comparisons/scival_outputs/scival_ids_authorlist_official.csv\"\n",
-    "OUTPUT_PATH_TO_CSV = \"sv_authorlist_publications_updated3.csv\"\n",
+    "OUTPUT_PATH_TO_CSV = \"sv_authorlist_publications_updated4.csv\"\n",
     "OUTPUT_PATH_TO_CLEANED_CSV = \"scival_authorlist_citations_nodupes.csv\"\n",
     "\n",
     "PUBLICATION_CUTOFF_YEAR = 0 #only publications DURING and AFTER this year will be counted\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "afda8b4d-73d7-4070-a6a6-cb5e3b8960b6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ab3b11a9-521d-46c2-9811-d7095154e9b2",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "645c93b4-e6f6-41ae-9721-3578c136aaf2",
    "metadata": {},
    "outputs": [],
@@ -157,32 +157,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "id": "bad0dadc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_document_coauthors(document, author_id, ids_names_dict, coauthor_dict, publications=[]):\n",
+    "def get_document_coauthors(document, author_id, ids_names_dict, coauthor_dict, publications=[], pub_dict={}, author_name =\"\"):\n",
     "    '''document: pybliometrics document object\n",
     "    author_id: id of author to look for coauthors with\n",
     "    ids_names_dict: dictionary where key is id and value is author name\n",
     "    coauthor_dict: dictionary of the document's coauthors'''\n",
     "    # publications.append(document.title)\n",
+    "    #for the SMS method\n",
+    "\n",
+    "    #get all author IDs related to paper\n",
     "    coauthors_list = document.author_ids.split(\";\")\n",
-    "    if author_id in coauthors_list: coauthors_list.remove(author_id)\n",
-    "    matching_coauthors = list(set(coauthors_list).intersection(ids_names_dict.keys()))\n",
+    "    # if author_id in coauthors_list: \n",
+    "    #     coauthors_list.remove(author_id)\n",
+    "    #filter for coauthors on list\n",
+    "    matching_coauthors = list(set(coauthors_list).intersection(ids_names_dict.keys())) \n",
+    "    \n",
     "    for id in matching_coauthors:\n",
     "        coauthor_name = ids_names_dict[id]\n",
+    "\n",
+    "        if (document.title not in pub_dict.keys()) or (coauthor_name not in pub_dict[document.title]): \n",
+    "            pub_dict.setdefault(document.title,[]).append(coauthor_name)\n",
+    "\n",
+    "        if id == author_id: \n",
+    "            continue #do not add the author to their own coauthor dict\n",
+    "        \n",
     "        try:\n",
     "            coauthor_dict[coauthor_name] = coauthor_dict[coauthor_name] + 1\n",
     "        except KeyError:\n",
     "            coauthor_dict[coauthor_name] = 1\n",
-    "    return coauthor_dict"
+    "    return coauthor_dict,pub_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fb82d373-9ea6-4ce4-84c2-8a65a9892260",
    "metadata": {},
    "outputs": [],
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a6de18f2",
    "metadata": {},
    "outputs": [
@@ -248,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f1cc81ab",
    "metadata": {},
    "outputs": [
@@ -278,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "181db4d4",
    "metadata": {},
    "outputs": [
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "id": "f8135e16-c82d-46f7-a120-e3dfce5de143",
    "metadata": {
     "scrolled": true
@@ -507,6 +520,8 @@
    "source": [
     "output_dict = {f\"{col_name}\":[] for col_name in output_cols}\n",
     "all_citations = [] #all citation per year information will be stored here\n",
+    "pub_authors = {}\n",
+    "orig_authors = {}\n",
     "\n",
     "for member in member_arr_filtered:\n",
     "    sleep(1)\n",
@@ -521,6 +536,7 @@
     "\n",
     "    print(f\"looking up {firstname} {lastname} ({scopus_id})...\")\n",
     "    ar = AuthorRetrieval(scopus_id)\n",
+    "    # author_name = f\"{ar.given_name} {ar.surname}\"\n",
     "    documents = ar.get_documents()\n",
     "\n",
     "    #get documents that are older than PUBLICATION CUTOFF YEAR\n",
@@ -533,7 +549,16 @@
     "    else:\n",
     "        coauthor_dict = {}\n",
     "        for document in documents:\n",
-    "            coauthor_dict = get_document_coauthors(document, scopus_id, name_id_dict, coauthor_dict)\n",
+    "            #SMS no duplicates coauthor method\n",
+    "            # if (document.title in pub_authors.keys()) and (author_name in pub_authors[document.title]):\n",
+    "            #     pass\n",
+    "            # else:\n",
+    "            #     pub_authors.setdefault(document.title,[]).append(author_name)\n",
+    "            \n",
+    "            # #SMS coauthor method\n",
+    "            pub_authors.setdefault(document.title,[]).append(author_name)\n",
+    "\n",
+    "            coauthor_dict, orig_authors = get_document_coauthors(document, scopus_id, name_id_dict, coauthor_dict, pub_dict = orig_authors, author_name=author_name)\n",
     "        \n",
     "        # output_cols = [\"Name\", \"Scopus ID\", \"Document Count\", \"Cited by\", \"Coauthors\", \"Affiliation\"]\n",
     "        output_dict[output_cols[0]].append(author_name)\n",
@@ -554,6 +579,166 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "062d588c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               Title  \\\n",
+      "0  Chronic multiscale resolution of mouse brain n...   \n",
+      "1  Water-Reaching Platform for Longitudinal Asses...   \n",
+      "2  Multiscale imaging informs translational mouse...   \n",
+      "3  Towards a Visualizable, De-identified Syntheti...   \n",
+      "4  Altered cortical processing of sensory input i...   \n",
+      "\n",
+      "                                       SMS Coauthors  \n",
+      "0               [Timothy H. Murphy, Lynn A. Raymond]  \n",
+      "1               [Timothy H. Murphy, Lynn A. Raymond]  \n",
+      "2              [Timothy H. Murphy, Jeffrey M. LeDue]  \n",
+      "3  [Timothy H. Murphy, Timothy H. Murphy, Helge R...  \n",
+      "4               [Timothy H. Murphy, Lynn A. Raymond]  \n"
+     ]
+    }
+   ],
+   "source": [
+    "collabs_dict={}\n",
+    "for key in pub_authors:\n",
+    "    for author in pub_authors[key]:\n",
+    "        for coauthor in pub_authors[key]:\n",
+    "            if coauthor is not author:\n",
+    "                if author not in collabs_dict.keys() or coauthor not in collabs_dict[author].keys():\n",
+    "                    collabs_dict.setdefault(author,{})[coauthor]=1\n",
+    "                else:\n",
+    "                    collabs_dict[author][coauthor]+=1\n",
+    "\n",
+    "coauthored_pubs = [\n",
+    "    title\n",
+    "    for title, authors in pub_authors.items() \n",
+    "    if len(authors) > 1]\n",
+    "\n",
+    "coauthored_authors = [\n",
+    "    authors\n",
+    "    for title, authors in pub_authors.items() \n",
+    "    if len(authors) > 1]\n",
+    "\n",
+    "coauthored_df = pd.DataFrame({\"Title\": coauthored_pubs, \"SMS Coauthors\": coauthored_authors})\n",
+    "\n",
+    "print(coauthored_df.head())\n",
+    "\n",
+    "coauthored_df.to_csv(\"shared_pubs_SMS.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "80c20963",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               Title  \\\n",
+      "0  Chronic multiscale resolution of mouse brain n...   \n",
+      "1  Water-Reaching Platform for Longitudinal Asses...   \n",
+      "2  Multiscale imaging informs translational mouse...   \n",
+      "3  Towards a Visualizable, De-identified Syntheti...   \n",
+      "4  Altered cortical processing of sensory input i...   \n",
+      "\n",
+      "                                    Direct Coauthors  \n",
+      "0               [Lynn A. Raymond, Timothy H. Murphy]  \n",
+      "1               [Lynn A. Raymond, Timothy H. Murphy]  \n",
+      "2              [Jeffrey M. LeDue, Timothy H. Murphy]  \n",
+      "3  [Helge Rhodin, Helge Rhodin, Timothy H. Murphy...  \n",
+      "4               [Lynn A. Raymond, Timothy H. Murphy]  \n"
+     ]
+    }
+   ],
+   "source": [
+    "collabs_orig_dict={}\n",
+    "for key in orig_authors:\n",
+    "    for author in orig_authors[key]:\n",
+    "        for coauthor in orig_authors[key]:\n",
+    "            if coauthor is not author:\n",
+    "                if author not in collabs_orig_dict.keys() or coauthor not in collabs_orig_dict[author].keys():\n",
+    "                    collabs_orig_dict.setdefault(author,{})[coauthor]=1\n",
+    "                else:\n",
+    "                    collabs_orig_dict[author][coauthor]+=1\n",
+    "\n",
+    "coauthored_orig_pubs = [\n",
+    "    title\n",
+    "    for title, authors in orig_authors.items() \n",
+    "    if len(authors) > 1]\n",
+    "\n",
+    "coauthored_orig_authors = [\n",
+    "    authors\n",
+    "    for title, authors in orig_authors.items() \n",
+    "    if len(authors) > 1]\n",
+    "\n",
+    "coauthored_orig_df = pd.DataFrame({\"Title\": coauthored_orig_pubs, \"Direct Coauthors\": coauthored_orig_authors})\n",
+    "\n",
+    "print(coauthored_orig_df.head())\n",
+    "\n",
+    "coauthored_orig_df.to_csv(\"shared_pubs_orig.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "0fdc40df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pannexin-1 opening in neuronal edema causes cell death but also leads to protection via increased microglia contacts']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([title for title in coauthored_orig_pubs if title not in coauthored_orig_pubs])\n",
+    "# Pannexin-1 opening in neuronal edema causes cell death but also leads to protection via increased microglia contacts "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "999d8875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Lynn A. Raymond': 17, 'Jeffrey M. LeDue': 25, 'Helge Rhodin': 5, 'Brian A. MacVicar': 2, 'YuTian Wang': 4, 'Wolfram G. Tetzlaff': 2, 'Craig E. Brown': 6, 'Andy Y. Shih': 9, 'Terrance P. Snutch': 1}, {}, {'Timothy H. Murphy': 2, 'Jeffrey M. LeDue': 10, 'Silke Appel-Cresswell': 1, 'Terrance P. Snutch': 5, 'Leigh Anne Swayne': 1, 'Shernaz X. Bamji': 1, 'YuTian Wang': 2, 'Anthony G. Phillips': 1}, {'Sophia Frangou': 5, 'Ian Mackenzie': 1, 'Jason S. Snyder': 2, 'Silke Appel-Cresswell': 1, 'Z. Jane Wang': 1}, {'Brian A. MacVicar': 1, 'YuTian Wang': 1, 'Kurt Haas': 3, 'Lynn A. Raymond': 2, 'Paul Pavlidis': 1, 'Catharine Rankin': 1, 'Terrance P. Snutch': 1, 'Anthony G. Phillips': 1, 'Ian Mackenzie': 1}, {'Liisa A. M. Galea': 1, 'Martin McKeown': 2, 'A. Jon Stoessl': 1, 'Silke Appel-Cresswell': 1, 'Vesna Sossi': 1, 'Todd Stephen Woodward': 2}, {'Shernaz X. Bamji': 1, 'Kurt Haas': 3, 'Catharine Rankin': 3, 'Jeffrey M. LeDue': 1}, {'Lara A. Boyd': 2, 'A. Jon Stoessl': 16, 'Silke Appel-Cresswell': 14, 'Vesna Sossi': 11, 'Z. Jane Wang': 85, 'Peyman Servati': 1}, {'Lara A. Boyd': 1, 'Martin McKeown': 16, 'Silke Appel-Cresswell': 14, 'Vesna Sossi': 73, 'Ian Mackenzie': 2, 'Anthony G. Phillips': 2, 'Terrance P. Snutch': 1}, {'Wolfram G. Tetzlaff': 6}, {'Fidel Vila-Rodriguez': 2}, {'Timothy H. Murphy': 2, 'P. A. Cripton': 6, 'Angela Jane I. Roskams': 9, 'Fabio Rossi': 1}, {'Brian A. MacVicar': 1, 'Shernaz X. Bamji': 1, 'A. Jon Stoessl': 2, 'Vesna Sossi': 2, 'Terrance P. Snutch': 3, 'Jeremy Keith Seamans': 15, 'YuTian Wang': 14, 'Z. Jane Wang': 1, 'Todd Stephen Woodward': 1}, {'Vesna Sossi': 1}, {'Timothy H. Murphy': 4, 'Jeffrey M. LeDue': 3, 'Brian A. MacVicar': 2, 'Shernaz X. Bamji': 1, 'Anthony G. Phillips': 14, 'Jeremy Keith Seamans': 1, 'Lynn A. Raymond': 2, 'Ian Mackenzie': 1, 'Catharine Rankin': 1}, {'Anthony G. Phillips': 15, 'YuTian Wang': 1, 'Todd Stephen Woodward': 1}, {'Timothy H. Murphy': 1, 'Brian A. MacVicar': 5, 'Jeffrey M. LeDue': 2, 'Shernaz X. Bamji': 1, 'A. Jon Stoessl': 1, 'Anthony G. Phillips': 3}, {'Fidel Vila-Rodriguez': 1, 'Shernaz X. Bamji': 1, 'Lynn A. Raymond': 2, 'A. Jon Stoessl': 2, 'Vesna Sossi': 2, 'YuTian Wang': 1}, {'Timothy H. Murphy': 17, 'Shernaz X. Bamji': 2, 'Ian Mackenzie': 2, 'YuTian Wang': 2, 'Jeffrey M. LeDue': 1}, {'Shernaz X. Bamji': 3, 'Paul Pavlidis': 3, 'Catharine Rankin': 2}, {}, {'Wolfram G. Tetzlaff': 1}, {'Wolfram G. Tetzlaff': 9}, {'Shernaz X. Bamji': 1, 'Paul Pavlidis': 3, 'Kurt Haas': 2, 'YuTian Wang': 1}, {}, {'Helge Rhodin': 1}, {'Fidel Vila-Rodriguez': 1, 'Martin McKeown': 85, 'Silke Appel-Cresswell': 2, 'Anthony G. Phillips': 1, 'Helge Rhodin': 2, 'Liisa A. M. Galea': 2, 'Brian Fisher': 8, 'Purang Abolmaesumi': 16, 'Peyman Servati': 1}, {'Martin McKeown': 1, 'Z. Jane Wang': 1}, {'Lara A. Boyd': 1, 'Z. Jane Wang': 2, 'Brian Fisher': 4, 'Purang Abolmaesumi': 8, 'Sophia Frangou': 1}, {'Fidel Vila-Rodriguez': 5, 'Liisa A. M. Galea': 1}, {'Brian A. MacVicar': 1, 'Fidel Vila-Rodriguez': 1, 'Lara A. Boyd': 1, 'Martin McKeown': 14, 'A. Jon Stoessl': 14, 'Vesna Sossi': 6, 'Z. Jane Wang': 2}, {'Timothy H. Murphy': 5, 'Jeffrey M. LeDue': 1, 'Leonid Sigal': 1, 'Z. Jane Wang': 2}, {}, {'Z. Jane Wang': 8, 'Liisa A. M. Galea': 4, 'Purang Abolmaesumi': 34}, {'Brian A. MacVicar': 1, 'Craig E. Brown': 1}, {'Timothy H. Murphy': 6, 'Leigh Anne Swayne': 1}, {'Eric T. Shea-Brown': 3}, {'Adrienne L. Fairhall': 3}, {}, {'Timothy H. Murphy': 9}, {'Lara A. Boyd': 2, 'Anthony G. Phillips': 1, 'Jeremy Keith Seamans': 1, 'Vesna Sossi': 1}, {'Timothy H. Murphy': 25, 'Helge Rhodin': 1, 'Brian A. MacVicar': 10, 'YuTian Wang': 3, 'Terrance P. Snutch': 2, 'Paul Pavlidis': 1, 'Lynn A. Raymond': 1}, {'Purang Abolmaesumi': 11}, {}, {'Z. Jane Wang': 16, 'Liisa A. M. Galea': 8, 'Brian Fisher': 34, 'Ilker Hacihaliloglu': 11}, {'Lara A. Boyd': 1, 'Martin McKeown': 11, 'A. Jon Stoessl': 73, 'Silke Appel-Cresswell': 6, 'Ian Mackenzie': 2, 'Anthony G. Phillips': 2, 'Catharine A. Winstanley': 1, 'Todd Stephen Woodward': 1}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write to rows dataframe\n",
+    "coauthors_new = [{}] * len(output_dict['Name'])\n",
+    "\n",
+    "for author, coauthors in collabs_dict.items():\n",
+    "    try:\n",
+    "        author_idx = output_dict['Name'].index(author)\n",
+    "        coauthors_new[author_idx] = coauthors\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "\n",
+    "# for author, coauthors in coauthors_new.items():\n",
+    "#     if coauthors == 0:\n",
+    "#         coauthors_new[author].update({author: {}})\n",
+    "\n",
+    "print(coauthors_new)\n",
+    "output_dict[\"SMS Coauthors\"] = coauthors_new"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4d70ca10",
    "metadata": {},
@@ -563,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 82,
    "id": "a80002f7",
    "metadata": {},
    "outputs": [],
@@ -789,7 +974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
