deleting duplicates from scholarscraper

--- a/ScholarScraper.ipynb
+++ b/ScholarScraper.ipynb
@@ -196,8 +196,9 @@
     "        # Get publications titles \n",
     "        for pub in data_dict['publications']:\n",
     "            pubs.append(pub['bib']['title'])\n",
-    "            # Add to dictionary with title as key and author as value\n",
-    "            pub_authors.setdefault(pub['bib']['title'],[]).append(data_dict['name'])\n",
+    "            # Add to dictionary with title as key and author as value if the author has not been already seen\n",
+    "            if (pub['bib']['title'] not in pub_authors.keys()) or (data_dict['name'] not in pub_authors[pub['bib']['title']]): \n",
+    "                pub_authors.setdefault(pub['bib']['title'],[]).append(data_dict['name'])\n",
     "        \n",
     "        # Get citations per year and put in dictionary\n",
     "        cites_per_year_dict = data_dict['cites_per_year']\n",
@@ -496,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
