--- a/scival_publications.ipynb
+++ b/scival_publications.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
    "id": "bad0dadc",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "id": "fb82d373-9ea6-4ce4-84c2-8a65a9892260",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 94,
    "id": "a6de18f2",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 95,
    "id": "f1cc81ab",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "id": "181db4d4",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "id": "f8135e16-c82d-46f7-a120-e3dfce5de143",
    "metadata": {
     "scrolled": true
@@ -550,13 +550,11 @@
     "        coauthor_dict = {}\n",
     "        for document in documents:\n",
     "            #SMS no duplicates coauthor method\n",
-    "            # if (document.title in pub_authors.keys()) and (author_name in pub_authors[document.title]):\n",
-    "            #     pass\n",
-    "            # else:\n",
-    "            #     pub_authors.setdefault(document.title,[]).append(author_name)\n",
+    "            if (document.title not in pub_authors.keys()) or (author_name not in pub_authors[document.title]): \n",
+    "                pub_authors.setdefault(document.title,[]).append(author_name)\n",
     "            \n",
     "            # #SMS coauthor method\n",
-    "            pub_authors.setdefault(document.title,[]).append(author_name)\n",
+    "            # pub_authors.setdefault(document.title,[]).append(author_name)\n",
     "\n",
     "            coauthor_dict, orig_authors = get_document_coauthors(document, scopus_id, name_id_dict, coauthor_dict, pub_dict = orig_authors, author_name=author_name)\n",
     "        \n",
@@ -580,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "id": "062d588c",
    "metadata": {},
    "outputs": [
@@ -595,12 +593,12 @@
       "3  Towards a Visualizable, De-identified Syntheti...   \n",
       "4  Altered cortical processing of sensory input i...   \n",
       "\n",
-      "                                       SMS Coauthors  \n",
-      "0               [Timothy H. Murphy, Lynn A. Raymond]  \n",
-      "1               [Timothy H. Murphy, Lynn A. Raymond]  \n",
-      "2              [Timothy H. Murphy, Jeffrey M. LeDue]  \n",
-      "3  [Timothy H. Murphy, Timothy H. Murphy, Helge R...  \n",
-      "4               [Timothy H. Murphy, Lynn A. Raymond]  \n"
+      "                           SMS Coauthors  \n",
+      "0   [Timothy H. Murphy, Lynn A. Raymond]  \n",
+      "1   [Timothy H. Murphy, Lynn A. Raymond]  \n",
+      "2  [Timothy H. Murphy, Jeffrey M. LeDue]  \n",
+      "3      [Timothy H. Murphy, Helge Rhodin]  \n",
+      "4   [Timothy H. Murphy, Lynn A. Raymond]  \n"
      ]
     }
    ],
@@ -629,12 +627,12 @@
     "\n",
     "print(coauthored_df.head())\n",
     "\n",
-    "coauthored_df.to_csv(\"shared_pubs_SMS.csv\",index=False)"
+    "coauthored_df.to_csv(\"sv_SMS_pubs_nodupes.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "id": "80c20963",
    "metadata": {},
    "outputs": [
@@ -649,12 +647,12 @@
       "3  Towards a Visualizable, De-identified Syntheti...   \n",
       "4  Altered cortical processing of sensory input i...   \n",
       "\n",
-      "                                    Direct Coauthors  \n",
-      "0               [Lynn A. Raymond, Timothy H. Murphy]  \n",
-      "1               [Lynn A. Raymond, Timothy H. Murphy]  \n",
-      "2              [Jeffrey M. LeDue, Timothy H. Murphy]  \n",
-      "3  [Helge Rhodin, Helge Rhodin, Timothy H. Murphy...  \n",
-      "4               [Lynn A. Raymond, Timothy H. Murphy]  \n"
+      "                        Direct Coauthors  \n",
+      "0   [Lynn A. Raymond, Timothy H. Murphy]  \n",
+      "1   [Lynn A. Raymond, Timothy H. Murphy]  \n",
+      "2  [Jeffrey M. LeDue, Timothy H. Murphy]  \n",
+      "3      [Helge Rhodin, Timothy H. Murphy]  \n",
+      "4   [Lynn A. Raymond, Timothy H. Murphy]  \n"
      ]
     }
    ],
@@ -683,12 +681,12 @@
     "\n",
     "print(coauthored_orig_df.head())\n",
     "\n",
-    "coauthored_orig_df.to_csv(\"shared_pubs_orig.csv\",index=False)"
+    "coauthored_orig_df.to_csv(\"sv_orig_pubs.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "id": "0fdc40df",
    "metadata": {},
    "outputs": [
@@ -696,13 +694,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[]\n",
       "['Pannexin-1 opening in neuronal edema causes cell death but also leads to protection via increased microglia contacts']\n"
      ]
     }
    ],
    "source": [
-    "print([title for title in coauthored_orig_pubs if title not in coauthored_orig_pubs])\n",
-    "# Pannexin-1 opening in neuronal edema causes cell death but also leads to protection via increased microglia contacts "
+    "print([title for title in coauthored_pubs if title not in coauthored_orig_pubs]) #SMS-original\n",
+    "print([title for title in coauthored_orig_pubs if title not in coauthored_pubs]) #original-SMS\n",
+    "# SMS is not capturing because..... Pannexin-1 opening in neuronal edema causes cell death but also leads to protection via increased microglia contacts \n",
+    "# SMS captures very basic titles that may have multiple authors"
    ]
   },
   {
