updated output graphs

--- a/ScivalScraper.ipynb
+++ b/ScivalScraper.ipynb
@@ -215,7 +215,8 @@
     "        for document in documents:\n",
     "            pubs.append(document.title)\n",
     "            # Add to dictionary with title as key and author as value\n",
-    "            pub_authors.setdefault(document.title, []).append(author_name)\n",
+    "            if (document.title not in pub_authors.keys()) or (author_name not in pub_authors[document.title]): \n",
+    "                pub_authors.setdefault(document.title, []).append(author_name)\n",
     "        \n",
     "        # Create row (dictionary) for output data table\n",
     "        # row = {'Name': data_dict['name'], 'Scholar ID': data_dict['scholar_id'], \n",
