--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -53,214 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f43e7fd8",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"dependency 'MASS' is not available\"\n",
-      "also installing the dependencies 'processx', 'xfun', 'bslib', 'fontawesome', 'htmltools', 'tinytex', 'lifecycle', 'tidyselect', 'vctrs', 'gtable', 'scales', 'gargle', 'timechange', 'systemfonts', 'vroom', 'callr', 'knitr', 'rmarkdown', 'glue', 'broom', 'conflicted', 'cli', 'dbplyr', 'dplyr', 'dtplyr', 'forcats', 'ggplot2', 'googledrive', 'googlesheets4', 'haven', 'hms', 'jsonlite', 'lubridate', 'magrittr', 'modelr', 'pillar', 'purrr', 'ragg', 'readr', 'readxl', 'reprex', 'rlang', 'rvest', 'stringr', 'tibble', 'tidyr', 'xml2'\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  There are binary versions available but the source versions are later:\n",
-      "               binary  source needs_compilation\n",
-      "processx        3.5.2   3.8.2              TRUE\n",
-      "xfun             0.22    0.40              TRUE\n",
-      "bslib           0.2.4   0.5.1             FALSE\n",
-      "fontawesome     0.2.1   0.5.2             FALSE\n",
-      "htmltools     0.5.1.1 0.5.6.1              TRUE\n",
-      "tinytex          0.31    0.48             FALSE\n",
-      "lifecycle       1.0.0   1.0.3             FALSE\n",
-      "tidyselect      1.1.1   1.2.0             FALSE\n",
-      "vctrs           0.3.8   0.6.4              TRUE\n",
-      "gtable          0.3.0   0.3.4             FALSE\n",
-      "scales          1.1.1   1.2.1             FALSE\n",
-      "gargle          1.1.0   1.5.2             FALSE\n",
-      "timechange      0.0.2   0.2.0              TRUE\n",
-      "systemfonts     1.0.2   1.0.5              TRUE\n",
-      "vroom           1.4.0   1.6.4              TRUE\n",
-      "callr           3.7.0   3.7.3             FALSE\n",
-      "knitr            1.33    1.44             FALSE\n",
-      "rmarkdown         2.8    2.25             FALSE\n",
-      "glue            1.4.2   1.6.2              TRUE\n",
-      "broom           0.7.6   1.0.5             FALSE\n",
-      "conflicted      1.0.4   1.2.0             FALSE\n",
-      "cli             2.5.0   3.6.1              TRUE\n",
-      "dbplyr          2.1.1   2.3.4             FALSE\n",
-      "dplyr           1.0.6   1.1.3              TRUE\n",
-      "dtplyr          1.1.0   1.3.1             FALSE\n",
-      "forcats         0.5.1   1.0.0             FALSE\n",
-      "ggplot2         3.3.3   3.4.4             FALSE\n",
-      "googledrive     1.0.1   2.1.1             FALSE\n",
-      "googlesheets4   0.3.0   1.1.1             FALSE\n",
-      "haven           2.4.1   2.5.3              TRUE\n",
-      "hms             1.0.0   1.1.3             FALSE\n",
-      "jsonlite        1.7.2   1.8.7              TRUE\n",
-      "lubridate      1.7.10   1.9.3              TRUE\n",
-      "magrittr        2.0.1   2.0.3              TRUE\n",
-      "modelr          0.1.8  0.1.11             FALSE\n",
-      "pillar          1.6.0   1.9.0             FALSE\n",
-      "purrr           0.3.4   1.0.2              TRUE\n",
-      "ragg            1.1.2   1.2.6              TRUE\n",
-      "readr           1.4.0   2.1.4              TRUE\n",
-      "readxl          1.3.1   1.4.3              TRUE\n",
-      "reprex          2.0.0   2.0.2             FALSE\n",
-      "rlang          0.4.11   1.1.1              TRUE\n",
-      "rvest           1.0.0   1.0.3             FALSE\n",
-      "stringr         1.4.0   1.5.0             FALSE\n",
-      "tibble          3.1.1   3.2.1              TRUE\n",
-      "tidyr           1.1.3   1.3.0              TRUE\n",
-      "xml2            1.3.2   1.3.5              TRUE\n",
-      "tidyverse       1.3.1   2.0.0             FALSE\n",
-      "\n",
-      "  Binaries will be installed\n",
-      "package 'processx' successfully unpacked and MD5 sums checked\n",
-      "package 'xfun' successfully unpacked and MD5 sums checked\n",
-      "package 'htmltools' successfully unpacked and MD5 sums checked\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"cannot remove prior installation of package 'htmltools'\"\n",
-      "Warning message in file.copy(savedcopy, lib, recursive = TRUE):\n",
-      "\"problem copying C:\\Users\\caoyut\\.conda\\envs\\sms\\Lib\\R\\library\\00LOCK\\htmltools\\libs\\x64\\htmltools.dll to C:\\Users\\caoyut\\.conda\\envs\\sms\\Lib\\R\\library\\htmltools\\libs\\x64\\htmltools.dll: Permission denied\"\n",
-      "Warning message:\n",
-      "\"restored 'htmltools'\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'vctrs' successfully unpacked and MD5 sums checked\n",
-      "package 'timechange' successfully unpacked and MD5 sums checked\n",
-      "package 'systemfonts' successfully unpacked and MD5 sums checked\n",
-      "package 'vroom' successfully unpacked and MD5 sums checked\n",
-      "package 'glue' successfully unpacked and MD5 sums checked\n",
-      "package 'cli' successfully unpacked and MD5 sums checked\n",
-      "package 'dplyr' successfully unpacked and MD5 sums checked\n",
-      "package 'haven' successfully unpacked and MD5 sums checked\n",
-      "package 'jsonlite' successfully unpacked and MD5 sums checked\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"cannot remove prior installation of package 'jsonlite'\"\n",
-      "Warning message in file.copy(savedcopy, lib, recursive = TRUE):\n",
-      "\"problem copying C:\\Users\\caoyut\\.conda\\envs\\sms\\Lib\\R\\library\\00LOCK\\jsonlite\\libs\\x64\\jsonlite.dll to C:\\Users\\caoyut\\.conda\\envs\\sms\\Lib\\R\\library\\jsonlite\\libs\\x64\\jsonlite.dll: Permission denied\"\n",
-      "Warning message:\n",
-      "\"restored 'jsonlite'\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'lubridate' successfully unpacked and MD5 sums checked\n",
-      "package 'magrittr' successfully unpacked and MD5 sums checked\n",
-      "package 'purrr' successfully unpacked and MD5 sums checked\n",
-      "package 'ragg' successfully unpacked and MD5 sums checked\n",
-      "package 'readr' successfully unpacked and MD5 sums checked\n",
-      "package 'readxl' successfully unpacked and MD5 sums checked\n",
-      "package 'rlang' successfully unpacked and MD5 sums checked\n",
-      "package 'tibble' successfully unpacked and MD5 sums checked\n",
-      "package 'tidyr' successfully unpacked and MD5 sums checked\n",
-      "package 'xml2' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\caoyut\\AppData\\Local\\Temp\\RtmpGmcnCV\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "installing the source packages 'bslib', 'fontawesome', 'tinytex', 'lifecycle', 'tidyselect', 'gtable', 'scales', 'gargle', 'callr', 'knitr', 'rmarkdown', 'broom', 'conflicted', 'dbplyr', 'dtplyr', 'forcats', 'ggplot2', 'googledrive', 'googlesheets4', 'hms', 'modelr', 'pillar', 'reprex', 'rvest', 'stringr', 'tidyverse'\n",
-      "\n",
-      "\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'bslib' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'fontawesome' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'tinytex' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'lifecycle' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'callr' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'knitr' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'conflicted' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'tidyselect' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'gtable' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'scales' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'gargle' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'forcats' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'hms' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'pillar' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'rvest' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'stringr' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'rmarkdown' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'broom' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'dbplyr' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'dtplyr' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'ggplot2' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'googledrive' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'googlesheets4' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'modelr' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'reprex' had non-zero exit status\"\n",
-      "Warning message in install.packages(\"tidyverse\"):\n",
-      "\"installation of package 'tidyverse' had non-zero exit status\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "install.packages(\"tidyverse\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
    "metadata": {
     "vscode": {
@@ -269,12 +62,36 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in library(tidyverse): there is no package called 'tidyverse'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(tidyverse): there is no package called 'tidyverse'\nTraceback:\n",
-      "1. library(tidyverse)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "Loading required package: viridisLite\n",
+      "\n",
+      "========================================\n",
+      "circlize version 0.4.16\n",
+      "CRAN page: https://cran.r-project.org/package=circlize\n",
+      "Github page: https://github.com/jokergoo/circlize\n",
+      "Documentation: https://jokergoo.github.io/circlize_book/book/\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. circlize implements and enhances circular visualization\n",
+      "  in R. Bioinformatics 2014.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(circlize))\n",
+      "========================================\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -299,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
    "metadata": {
     "vscode": {
@@ -314,10 +131,13 @@
     "# title = \"Google Scholar DBC Coauthored Publications\"\n",
     "# output_pdf_path = \"gs_DBC_weighted.pdf\"thorlist compariso\n",
     "\n",
-    "ss_output_file = \"coauthor duplicates/gs_SMS.csv\"\n",
-    "title = \"Google Scholar DBC Collaborations\"\n",
-    "output_pdf_path = \"gs_DBC_weighted.pdf\"\n",
-    "\n"
+    "# ss_output_file = \"coauthor duplicates/gs_SMS.csv\"\n",
+    "# title = \"Google Scholar DBC Collaborations\"\n",
+    "# output_pdf_path = \"gs_DBC_weighted.pdf\"\n",
+    "\n",
+    "ss_output_file = \"sv_authorlist_publications_updated4.csv\"\n",
+    "title = \"SciVal DBC Collaborations\"\n",
+    "output_pdf_path = \"sv_DBC_weighted.pdf\"\n"
    ]
   },
   {
@@ -332,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
    "metadata": {
     "vscode": {
@@ -360,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
    "metadata": {
     "vscode": {
@@ -382,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
    "metadata": {
     "vscode": {
@@ -408,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
    "metadata": {
     "vscode": {
@@ -463,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
    "metadata": {
     "vscode": {
@@ -499,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
    "metadata": {
     "vscode": {
@@ -634,7 +454,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
