--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "48dd282f-c187-4c92-855d-a42f2c607d86",
    "metadata": {
     "vscode": {
@@ -131,13 +131,13 @@
     "# title = \"Google Scholar DBC Coauthored Publications\"\n",
     "# output_pdf_path = \"gs_DBC_weighted.pdf\"thorlist compariso\n",
     "\n",
-    "# ss_output_file = \"coauthor duplicates/gs_SMS.csv\"\n",
-    "# title = \"Google Scholar DBC Collaborations\"\n",
-    "# output_pdf_path = \"gs_DBC_weighted.pdf\"\n",
+    "ss_output_file = \"gs_SMS_nodupes.csv\"\n",
+    "title = \"Google Scholar DBC Collaborations\"\n",
+    "output_pdf_path = \"gs_DBC_weighted.pdf\"\n",
     "\n",
-    "ss_output_file = \"sv_authorlist_publications_updated4.csv\"\n",
-    "title = \"SciVal DBC Collaborations\"\n",
-    "output_pdf_path = \"sv_DBC_weighted.pdf\"\n"
+    "# ss_output_file = \"sv_authorlist_publications_updated4.csv\"\n",
+    "# title = \"SciVal DBC Collaborations\"\n",
+    "# output_pdf_path = \"sv_DBC_weighted.pdf\"\n"
    ]
   },
   {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "cbf220ec-01c2-4bac-aeec-64b01ef9ce4a",
    "metadata": {
     "vscode": {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "4490937c-f743-4584-b016-785bac8c3777",
    "metadata": {
     "vscode": {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "1db6abb7-5a2e-4ff3-8683-d2a32a80d15b",
    "metadata": {
     "vscode": {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "9bf222d0-9e43-4a65-b8be-75c472437150",
    "metadata": {
     "vscode": {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "9f1bc4f3-c252-43b6-baa9-3c1a896266d6",
    "metadata": {
     "vscode": {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "131f81a0-8fd0-46d9-a856-245d27ae912b",
    "metadata": {
     "vscode": {
