--- a/ScholarCollabs.ipynb
+++ b/ScholarCollabs.ipynb
@@ -54,6 +54,50 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d6b3d227",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R version 4.2.2 (2022-10-31)\n",
+       "Platform: aarch64-apple-darwin20.0.0 (64-bit)\n",
+       "Running under: macOS Ventura 13.2.1\n",
+       "\n",
+       "Matrix products: default\n",
+       "BLAS:   /Users/ytcao/miniconda3/envs/sms/lib/R/lib/libRblas.dylib\n",
+       "LAPACK: /Users/ytcao/miniconda3/envs/sms/lib/R/lib/libRlapack.dylib\n",
+       "\n",
+       "locale:\n",
+       "[1] C/UTF-8/C/C/C/C\n",
+       "\n",
+       "attached base packages:\n",
+       "[1] stats     graphics  grDevices utils     datasets  methods   base     \n",
+       "\n",
+       "loaded via a namespace (and not attached):\n",
+       " [1] fansi_1.0.4     crayon_1.5.2    digest_0.6.33   utf8_1.2.3     \n",
+       " [5] IRdisplay_1.1   repr_1.1.6      lifecycle_1.0.3 jsonlite_1.8.7 \n",
+       " [9] evaluate_0.21   pillar_1.9.0    rlang_1.1.1     cli_3.6.1      \n",
+       "[13] uuid_1.1-0      vctrs_0.6.3     IRkernel_1.3.2  tools_4.2.2    \n",
+       "[17] glue_1.6.2      fastmap_1.1.1   compiler_4.2.2  base64enc_0.1-3\n",
+       "[21] pbdZMQ_0.3-9    htmltools_0.5.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sessionInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "0b8f7647-2f14-4e3e-99b0-df093190f2ee",
    "metadata": {
     "vscode": {
